--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/naranjorincon"
+  github           : "https://github.com/naranjorincon" # needs a link
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/samuel-naranjo-rincon-29000b163/"
+  linkedin         : "https://www.linkedin.com/in/samuel-naranjo-rincon-29000b163/" # also jsut needs a link, but not working...
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
